# NexusOps

./: .env.example  .gitignore  .pydantic_ai_agent_help.txt  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_agent.py  test_phase2.py
Refrence-docs/: 01-WSP-Agent-KT.md  02-Taara-App-Backend-Complete-Guide.md  03-ONA-Agentic-Applications-Guide.md  04-ONA-Agentic-Tools-Guide.md  05-Complete-System-Infrastructure-And-Config-Guide.md
alembic/: env.py
alembic/versions/: 4a9e72f6be54_create_nexusops_conversations_table.py
backend/api/: main.py  middleware.py
backend/api/routers/: websocket_router.py
backend/api/webhooks/: ingester.py
backend/core/agents/: agent_base.py  coordinator.py  metrics_agent.py  pydantic_ai_agent.py  specialists.py
backend/core/config/: base.py  settings.py
backend/core/db/: database.py  models.py
backend/core/events/: kafka_infra.py  schemas.py
backend/core/memory/: conversation_service.py  message_base.py
backend/core/utils/: audit_logger.py  embedding_service.py  guardrails.py  knowledge_ingestion.py  rag_utils.py
backend/core/workflows/: triage_pipeline.py
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  LOCAL_TESTING.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: useNexusWebSocket.ts
infra/docker/prometheus/: prometheus.yml
knowledge_base/: incident-INC-1847.md  runbook-memory-leak.md
